test/instance-checks-4.err.expect
test/instance-checks-4.ktn:1:1: error: cannot match scalar type t1 with int
test/instance-checks-4.ktn:1:1: note: t1 (from example) is from here
test/instance-checks-4.ktn:1:13: note: int (from example) is from here
