test/instance-checks-4.ktn
def example @a (int a -> a a) { }
